--- a/env.example
+++ b/env.example
@@ -8,6 +8,8 @@ DEFAULT_PHONE="+62 (21) 123-4567"
 DEFAULT_LOCATION="Special Region of Yogyakarta, ID"
 DEFAULT_GITHUB="https://github.com/mnasikin"
 DEFAULT_LINKEDIN="https://linkedin.com/in/johndoe"
+DEFAULT_HIGHLIGHTS="Problem Solver, Team Player, Continuous Learner"
+DEFAULT_QUOTE="When I'm not coding, you can find me exploring new technologies, contributing to open-source projects, or enjoying a good cup of coffee while reading about the latest developments in the tech world."
 
 # Database Configuration
 DATABASE_URL="file:./db/porfolio.db"
@@ -33,6 +35,7 @@ SITE_TITLE="John Doe - Full Stack Developer"
 SITE_DESCRIPTION="Portfolio website showcasing projects, experience, and skills"
 SITE_URL=http://localhost:3000
 SITE_KEYWORDS="full stack developer, web development, portfolio, projects"
+OG_IMAGE="/img/og-image.png"
 
 # Social Media Configuration
 GITHUB_URL=https://github.com/mnasikin
@@ -57,4 +60,3 @@ GOOGLE_TAG_MANAGER_ID=
 # Development Configuration
 NODE_ENV=development
 DEBUG=false
-
